--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,14 @@
             android:label="@string/app_name"
             android:supportsRtl="true"
             android:theme="@android:style/Theme.DeviceDefault">
+        <activity
+                android:name=".HeartBeatActivity"
+                android:exported="true"
+                android:label="@string/title_activity_heart_beat"/>
+
         <uses-library
                 android:name="com.google.android.wearable"
                 android:required="true"/>
-
         <!--
                Set to true if your app is Standalone, that is, it does not require the handheld
                app to run.
